kubernetes/external-dns/base/pihole-deployment.yaml
---
# Source: external-dns/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-okd
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_38= Require Use of Service Account Tokens
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns-okd
    app.kubernetes.io/instance: external-dns-okd
    app.kubernetes.io/version: "0.15.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns-okd
      app.kubernetes.io/instance: external-dns-okd
  strategy:
    type: RollingUpdate # Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns-okd
        app.kubernetes.io/instance: external-dns-okd
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: external-dns-okd
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: external-dns
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      containers:
        - name: external-dns-okd
          securityContext:
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 10m
              memory: 192Mi
            requests:
              cpu: 5m
              memory: 96Mi
          image: registry.k8s.io/external-dns/external-dns:v0.19.0@sha256:ddc7f4212ed09a21024deb1f470a05240837712e74e4b9f6d1f2632ff10672e7
          imagePullPolicy: IfNotPresent
          args:
            - --log-level=info
            - --log-format=text
            - --interval=1m
            - --source=service
            # - --source=ingress
            - --source=openshift-route
            - --source=gateway-httproute
            # - --source=gateway-tlsroute
            # - --source=gateway-tcproute
            # - --source=gateway-udproute
            - --source=crd
            - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
            - --crd-source-kind=DNSEndpoint
            - --registry=noop
            - --provider=pihole
            - --pihole-api-version=6
            # Change this to the actual address of your Pi-hole web server
            - "--pihole-server=https://pihole.okd.homelab.arthurvardevanyan.com"
            - --annotation-filter=externaldns.k8s.io in (pihole)
            # - --policy=sync #upsert-only
          ports:
            - name: http
              protocol: TCP
              containerPort: 7979
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 65
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      enableServiceLinks: false
---
# Source: external-dns/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns-microshift
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_38= Require Use of Service Account Tokens
  namespace: external-dns
  labels:
    app.kubernetes.io/name: external-dns-microshift
    app.kubernetes.io/instance: external-dns-microshift
    app.kubernetes.io/version: "0.15.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: external-dns-microshift
      app.kubernetes.io/instance: external-dns-microshift
  strategy:
    type: RollingUpdate # Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: external-dns-microshift
        app.kubernetes.io/instance: external-dns-microshift
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
                  - key: node-role.kubernetes.io/control-plane
                    operator: Exists
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: external-dns-microshift
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: external-dns
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      containers:
        - name: external-dns-microshift
          securityContext:
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 50m
              memory: 192Mi
            requests:
              cpu: 5m
              memory: 96Mi
          image: registry.k8s.io/external-dns/external-dns:v0.19.0@sha256:ddc7f4212ed09a21024deb1f470a05240837712e74e4b9f6d1f2632ff10672e7
          imagePullPolicy: IfNotPresent
          args:
            - --log-level=info
            - --log-format=text
            - --interval=1m
            - --source=service
            # - --source=ingress
            - --source=openshift-route
            - --source=gateway-httproute
            # - --source=gateway-tlsroute
            # - --source=gateway-tcproute
            # - --source=gateway-udproute
            - --source=crd
            - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
            - --crd-source-kind=DNSEndpoint
            - --registry=noop
            - --provider=pihole
            - --pihole-api-version=6
            # Change this to the actual address of your Pi-hole web server
            - --pihole-server=https://pihole.arthurvardevanyan.com
            - --annotation-filter=externaldns.k8s.io in (pihole)
            # - --policy=sync #upsert-only
          ports:
            - name: http
              protocol: TCP
              containerPort: 7979
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 65
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
      enableServiceLinks: false
